Bug 1065452 - Add an API to access the associated window of addon scopes. r=billm